force-app/main/default/objects/Medication__c/Medication__c.object-meta.xml
<CustomObject>
    <label>Medication</label>
    <nameField>
        <displayFormat>Med-{0000}</displayFormat>
        <label>Medication  ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Medication</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>