force-app/main/default/objects/Medication__c/fields/Number_of_Medicine__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Medicine__c</fullName>
    <label>Number of Medicine</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>