force-app/main/default/objects/Medication__c/fields/Prescribed_From__c.field-meta.xml
<CustomField>
    <fullName>Prescribed_From__c</fullName>
    <label>Prescribed From</label>
    <type>DateTime</type>
</CustomField>