force-app/main/default/objects/Medication__c/fields/Prescribed_Tests__c.field-meta.xml
<CustomField>
    <fullName>Prescribed_Tests__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prescribed Tests</label>
    <referenceTo>Prescribed_Test__c</referenceTo>
    <relationshipLabel>Medication</relationshipLabel>
    <relationshipName>Medication</relationshipName>
    <type>Lookup</type>
</CustomField>