force-app/main/default/objects/Medication__c/fields/Prescribed_Till__c.field-meta.xml
<CustomField>
    <fullName>Prescribed_Till__c</fullName>
    <label>Prescribed Till</label>
    <type>DateTime</type>
</CustomField>