force-app/main/default/objects/Medication__c/fields/Prescription_Date__c.field-meta.xml
<CustomField>
    <fullName>Prescription_Date__c</fullName>
    <label>Prescription Date</label>
    <type>Date</type>
</CustomField>