force-app/main/default/objects/Medication__c/fields/Prescription_Detail__c.field-meta.xml
<CustomField>
    <fullName>Prescription_Detail__c</fullName>
    <label>Prescription Detail</label>
    <type>TextArea</type>
</CustomField>