force-app/main/default/objects/Medication__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Name__c</columns>
    <columns>Appointment__c</columns>
    <columns>Patient__c</columns>
    <columns>Prescribed_Tests__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>